--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
-<html>
+  <!--
+    Conditional classes for cross browser compatibility:
+      http://paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/
+   -->
+  <!--[if lt IE 7 ]> <html class="ie6" lang="<%= I18n.locale %>"> <![endif]-->
+  <!--[if IE 7 ]>    <html class="ie7" lang="<%= I18n.locale %>"> <![endif]-->
+  <!--[if IE 8 ]>    <html class="ie8" lang="<%= I18n.locale %>"> <![endif]-->
+  <!--[if IE 9 ]>    <html class="ie9" lang="<%= I18n.locale %>"> <![endif]-->
+  <!--[if (gt IE 9)|!(IE)]><!--><html lang="<%= I18n.locale %>"> <!--<![endif]-->
 <head>
-  <title>Tourbooker</title>
+  <title><%=I18n.t("tourbooker")%></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= yield :javascript_head %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <meta name="format-detection" content="telephone=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 <body>
-
 <%= yield %>
-
+<script type="text/javascript">
+    $(function() {
+        I18n.defaultLocale = "<%=I18n.default_locale.to_s%>";
+        I18n.locale = "<%=I18n.locale.to_s%>";
+        I18n.fallbacks = true;
+    });
+</script>
 </body>
 </html>
