--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <!--[if IE 9 ]>    <html class="ie9" lang="<%= I18n.locale %>"> <![endif]-->
   <!--[if (gt IE 9)|!(IE)]><!--><html lang="<%= I18n.locale %>"> <!--<![endif]-->
 <head>
-  <title><%=I18n.t("tourbooker")%></title>
+  <title><%=I18n.t("app_name")%></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= yield :javascript_head %>
   <%= javascript_include_tag "application" %>
@@ -18,7 +18,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 <body>
-<%= yield %>
+<div class="container">
+<%= render :partial => 'common/header' %>
+<div class="jumbotron"><%= yield %></div>
+</div>
 <script type="text/javascript">
     $(function() {
         I18n.defaultLocale = "<%=I18n.default_locale.to_s%>";
