--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,20 @@
-<h1>New user</h1>
+<%= form_for(@user, :class=>"form-signin") do |f| %>
+    <% if @user.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= t("views.user_create_error", :count=>@user.errors.count) %></h2>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', users_path %>
+          <ul>
+            <% @user.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+    <h2 class="form-signin-heading"><%=t("views.new_user.get_started")%></h2>
+    <div class="field">
+      <%= f.text_field :email, :class=>"form-control required", :placeholder=>User.human_attribute_name(:email) %>
+    </div>
+    <div class="actions">
+      <%= f.submit(:class=>"btn btn-lg btn-primary btn-block") %>
+    </div>
+<% end %>
