new user form is done with client side validation

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
-<%= form_for(@user, :class=>"form-signin") do |f| %>
+<%= form_for(@user, :html=>{:class=>"form-signin"}) do |f| %>
     <% if @user.errors.any? %>
         <div id="error_explanation">
-          <h2><%= t("views.user_create_error", :count=>@user.errors.count) %></h2>
+          <h4><%= t("views.user_create_error", :count=>@user.errors.count) %></h4>
 
           <ul>
             <% @user.errors.full_messages.each do |msg| %>
@@ -12,7 +12,7 @@
     <% end %>
     <h2 class="form-signin-heading"><%=t("views.new_user.get_started")%></h2>
     <div class="field">
-      <%= f.text_field :email, :class=>"form-control required", :placeholder=>User.human_attribute_name(:email) %>
+      <%= f.text_field :email, :class=>"form-control required email", :placeholder=>User.human_attribute_name(:email) %>
     </div>
     <div class="actions">
       <%= f.submit(:class=>"btn btn-lg btn-primary btn-block") %>
