refactor of authorize to activate.

--- a/app/views/user_mailer/create_user.html.erb
+++ b/app/views/user_mailer/create_user.html.erb
@@ -4,9 +4,9 @@
   <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
 </head>
 <body>
-<h1><%=I18n.t("action_mailer.authorize_user.line_1")%></h1>
+<h1><%=I18n.t("action_mailer.activate_user.line_1")%></h1>
 <p>
-  <%=I18n.t("action_mailer.authorize_user.line_2", :link=>@url)%>
+  <%=I18n.t("action_mailer.activate_user.line_2", :link=>@url)%>
 </p>
 </body>
 </html>
