--- a/app/views/user_mailer/create_user.text.erb
+++ b/app/views/user_mailer/create_user.text.erb
@@ -1,4 +1,4 @@
-<%=I18n.t("action_mailer.authorize_user.line_1")%>
+<%=I18n.t("action_mailer.activate_user.line_1")%>
 ===============================================
 
-<%=I18n.t("action_mailer.authorize_user.line_2", :link=>@url)%>
+<%=I18n.t("action_mailer.activate_user.line_2", :link=>@url)%>
