--- a/app/views/users/activate.html.erb
+++ b/app/views/users/activate.html.erb
@@ -1,2 +1,2 @@
-<%= form_for(@user, :html=>{:class=>"form-signin"}) do |f| %>
+<%= form_for(@user,:url=> :html=>{:class=>"form-signin"}) do |f| %>
 <% end %>
