--- a/app/views/users/activate.html.erb
+++ b/app/views/users/activate.html.erb
@@ -1,2 +1,2 @@
-<%= form_for(@user,:url=>register_user_path(@user), :html=>{:class=>"form-signin"}) do |f| %>
+<%= form_for(@user,:url=>save_activation_user_path(@user), :method => :put, :html=>{:class=>"form-signin"}) do |f| %>
 <% end %>
