Created forms for activate and register

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  *
  *= require_self
  *= require bootstrap3.1.0
+ *= require datepicker
  *= require bootstrap-theme3.1.0
  *= require_tree .
  */
