--- a/app/views/users/activate.html.erb
+++ b/app/views/users/activate.html.erb
@@ -1,2 +1,30 @@
-<%= form_for(@user,:url=>save_activation_user_path(@user), :method => :put, :html=>{:class=>"form-signin"}) do |f| %>
+<%= form_for(@user,:url=>save_activation_user_path(@user.id, :token=>@user.token), :method => :put, :html=>{:class=>"form"}) do |f| %>
+    <% if @user.errors.any? %>
+        <div id="error_explanation">
+          <h4><%= t("views.user_update_error", :count=>@user.errors.count) %></h4>
+
+          <ul>
+            <% @user.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+    <h2 class="form-signin-heading"><%=t("views.activate_user.intro")%></h2>
+
+    <div class="field">
+      <%= f.label :first_name %><br />
+      <%= f.text_field :first_name, :class=>"form-control required"%>
+    </div>
+    <div class="field">
+      <%= f.label :last_name %><br />
+      <%= f.text_field :last_name, :class=>"form-control required" %>
+    </div>
+    <div class="field">
+      <%= f.label :phone %><br />
+      <%= f.text_field :phone, :class=>"form-control required" %>
+    </div>
+    <div class="actions">
+      <%= f.submit(:value=>t("helpers.submit.save_activation"),:class=>"btn btn-lg btn-primary btn-block") %>
+    </div>
 <% end %>
