--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user, :html=>{:class=>"form-signin"}) do |f| %>
+<%= form_for(@user, :html=>{:class=>"form form-signin"}) do |f| %>
     <% if @user.errors.any? %>
         <div id="error_explanation">
           <h4><%= t("views.user_create_error", :count=>@user.errors.count) %></h4>
