added header to amenities checkboxes and removed extra } from email

--- a/app/views/users/rate.html.erb
+++ b/app/views/users/rate.html.erb
@@ -26,11 +26,11 @@
 <div class="field">
   <label for="user_amenities"><%=t("views.amenities")%></label>
   <ul>
-    <%= "<li>#{User.human_attribute_name(:amn_pool)}}</li>".html_safe if @user.amn_pool%>
-    <%= "<li>#{User.human_attribute_name(:amn_rec_room)}}</li>".html_safe if @user.amn_rec_room%>
-    <%= "<li>#{User.human_attribute_name(:amn_movie_theater)}}</li>".html_safe if @user.amn_movie_theater%>
-    <%= "<li>#{User.human_attribute_name(:amn_doctor)}}</li>".html_safe if @user.amn_doctor%>
-    <%= "<li>#{User.human_attribute_name(:amn_time_machine)}}</li>".html_safe if @user.amn_time_machine%>
+    <%= "<li>#{User.human_attribute_name(:amn_pool)}</li>".html_safe if @user.amn_pool%>
+    <%= "<li>#{User.human_attribute_name(:amn_rec_room)}</li>".html_safe if @user.amn_rec_room%>
+    <%= "<li>#{User.human_attribute_name(:amn_movie_theater)}</li>".html_safe if @user.amn_movie_theater%>
+    <%= "<li>#{User.human_attribute_name(:amn_doctor)}</li>".html_safe if @user.amn_doctor%>
+    <%= "<li>#{User.human_attribute_name(:amn_time_machine)}</li>".html_safe if @user.amn_time_machine%>
   </ul>
 </div>
 <hr/>
